# automatic_robot_debug

./: .gitignore  CMakeLists.txt  create-makefile.sh  package.xml  print.cmake  system-platform.cmake
app/: cleaner_robot.partial-clean-ok-20180124  main.app
include/cleaner_robot/debug/: debug_function.h
include/cleaner_robot/lib/bll_layer/: bll_base_type.h
include/cleaner_robot/lib/cfg_layer/: cfg_base_type.h
include/cleaner_robot/lib/cfg_layer/data/: cfg_robot_data.h
include/cleaner_robot/lib/cfg_layer/mobile_robot/: cfg_if_mobile_robot.cpp  cfg_if_mobile_robot.h  cfg_mobile_robot.h
include/cleaner_robot/lib/cfg_layer/modulate/: cfg_if_modulate.cpp  cfg_if_modulate.h  cfg_modulate.h
include/cleaner_robot/lib/cfg_layer/walk_plan/: cfg_walk_plan.h
include/cleaner_robot/lib/common/algorithm/pid/: pid.h
include/cleaner_robot/lib/common/angle/: angle_base.h
include/cleaner_robot/lib/common/key/: key_base.h
include/cleaner_robot/lib/common/version/: cfg_if_version.cpp  cfg_if_version.h
include/cleaner_robot/type/: base_type.h  mobile_robot_type.h
include/kobuki_msgs/: AutoDockingAction.h  AutoDockingActionFeedback.h  AutoDockingActionGoal.h  AutoDockingActionResult.h  AutoDockingFeedback.h  AutoDockingGoal.h  AutoDockingResult.h  BumperEvent.h  ButtonEvent.h  CliffEvent.h  ControllerInfo.h  DigitalInputEvent.h  DigitalOutput.h  DockInfraRed.h  ExternalPower.h  KeyboardInput.h  Led.h  MotorPower.h  PowerSystemEvent.h  RobotStateEvent.h  ScanAngle.h  SensorState.h  Sound.h  VersionInfo.h  WheelDropEvent.h
launch/: cleaner_robot_test.launch  move_mobile_robot.launch  robot.launch  robot_walk_by_kobuki.launch  ultrasonic_sensor.launch
mobile_robot/: README.md
shell/: config-self-start.sh  create-makefiel-by-cmake.sh  create-swap-file.sh  mount-cleaner-robot.sh  ros-daemon.bash  start_prj.sh
src/business_logic_layer/: bll_rotate.cpp  bll_rotate.h  bll_traight_line_moving.h
src/business_logic_layer/motion_control/: bll_motion_control.cpp  bll_motion_control.h
src/business_logic_layer/partial_cleaning/: bll_partial_cleaning.cpp  bll_partial_cleaning.h
src/business_logic_layer/processing_function/: bll_processing_function.cpp  bll_processing_function.h
src/business_logic_layer/rotate/: bll_rotate.cpp  bll_rotate.h
src/business_logic_layer/sensor/bumper_sensor/: bll_bumper.cpp  bll_bumper.h
src/business_logic_layer/sensor/cliff_sensor/: bll_cliff.cpp  bll_cliff.h
src/business_logic_layer/sensor/lidar_sensor/: bll_lidar.cpp  bll_lidar.h
src/business_logic_layer/sensor/ultrasonic_sensor/: bll_ultrasonic.cpp  bll_ultrasonic.h
src/business_logic_layer/sensor/wall_following_sensor/: bll_wall_following.cpp  bll_wall_following.h
src/business_logic_layer/sensor/wheel_drop_sensor/: bll_wheel_drop.cpp  bll_wheel_drop.h
src/business_logic_layer/straight_line_moving/: bll_traight_line_moving.cpp  bll_traight_line_moving.h
src/business_logic_layer/timer/: bll_timer.cpp  bll_timer.h
src/business_logic_layer/trajectory/: bll_trajectory.cpp  bll_trajectory.h
src/cfg_layer/data/: cfg_robot_data.cpp  cfg_robot_data.h
src/cfg_layer/mobile_robot/: cfg_mobile_robot.cpp  cfg_mobile_robot.h
src/cfg_layer/modulate/: cfg_modulate.cpp  cfg_modulate.h
src/cfg_layer/walk_plan/: cfg_walk_plan.cpp  cfg_walk_plan.h
src/common/algorithm/pid/: pid.cpp  pid.h
src/common/angle/: angle_base.cpp  angle_base.h
src/common/bit/: bit_base.h
src/common/key/key_data/: key_data.cpp  key_data.h
src/common/key/key_unit/: key_unit.cpp  key_unit.h
src/common/line/: line_base.cpp  line_base.h
src/common/time/: mul_timer.c  mul_timer.h  time_base.c  time_base.h
src/common/version/: version.cpp  version.h
src/drv_layer/key/: drv_key.cpp  drv_key.h
src/drv_layer/sensor/: drv_sensor.cpp  drv_sensor.h
src/main/: main.cpp  mobile_robot_main.cpp
